--- a/erp/discussions.html
+++ b/erp/discussions.html
@@ -100,11 +100,11 @@
                 </div>
                 <div class="dizhi">
                     <p>
-                        联系人： Ryan<br>
-                        联系电话：17097218588      0755-28227734<br>
-                        邮箱：Chenfeng@irobotbox.com<br>
-                        投诉电话：17097218588 投诉邮箱：ts@irobotbox.com<br>
-                        地址：深圳市龙岗区布龙路601号赛盒跨境电商产业园3栋2楼
+                        联系人： simon<br>
+                        联系电话：13169605747	0769-89938988-8034<br>
+                        邮箱：service@wizerspark.com<br>
+                        投诉电话：13169605747 投诉邮箱：service@wizerspark.com<br>
+                        地址：广东省东莞市虎门镇南栅五区海杰路二路虎门跨境电商园
                     </p>
                 </div>
             </div>
