--- a/erp/schedule-a-demo.html
+++ b/erp/schedule-a-demo.html
@@ -36,12 +36,9 @@
 
             <div class="field-item">
                 <h3>联系我们:</h3>
-                <p> 联系人：<strong>Simon</strong></p>
+
                 <p> 客服座机：<strong>0769-89938988-8034</strong></p>
-                <p> 联系电话：<strong>13169605747</strong></p>
-                <p> 邮箱：<strong>service@wizerspark.com</strong></p>
-                <p> 投诉电话：<strong>13169605747</strong> </p>
-                <p> 投诉邮箱：<strong>service@wizerspark.com</strong></p>
+
             </div>
         </div>
 
@@ -79,47 +76,39 @@
     </div>
     <div class="clear10"></div>
 </div>
-<div></div>
-<div id="list">
-    <footer>
-        <div class="container">
-            <div class="foot_left" style="float: left;">
-                <div class="foot_bt">
-                    联系我们
-                </div>
-                <div class="dizhi">
-                    <p>
-                        联系人： Ryan<br>
-                        联系电话：17097218588      0755-28227734<br>
-                        邮箱：Chenfeng@irobotbox.com<br>
-                        投诉电话：17097218588 投诉邮箱：ts@irobotbox.com<br>
-                        地址：深圳市龙岗区布龙路601号赛盒跨境电商产业园3栋2楼
-                    </p>
-                </div>
+
+<footer>
+    <div class="container">
+        <div class="foot_left" style="float: left;">
+            <div class="foot_bt">
+                联系我们
             </div>
-            <div class="foot_left" style="float: right;">
-                <div class="foot_bt">
-                    官方合作伙伴
-                </div>
-                <div class="huoban_logo">
-                    <ul>
-                        <li><a href="https://aws.amazon.com/cn/?nc2=h_lg" target="_blank"><img src="image/ymx_w.png"></a></li>
-                        <li><a href="https://www.payoneer.com/zh/irobotbox/" target="_blank"><img src="image/payoneer.png"></a></li>
-                        <li><a href="http://www.haixianhui.cc/" target="_blank"><img src="image/hxhlogo.png"></a></li>
-                    </ul>
-                </div>
+            <div class="dizhi">
+
+                <p>
+                    联系人： simon<br>
+                    联系电话：13169605747	0769-89938988-8034<br>
+                    邮箱：service@wizerspark.com<br>
+                    投诉电话：13169605747 投诉邮箱：service@wizerspark.com<br>
+                    地址：广东省东莞市虎门镇南栅五区海杰路二路虎门跨境电商园
+                </p>
+
             </div>
         </div>
-    </footer>
-    <div style="text-align: center;padding:16px ;">东莞卖疯乐科技网站备案号：粤ICP备14046412号-1</div>
-
-</div>
-<script>
-    console.log(list);
-    list.innerHTML=`<p>
-    asff
-    fads
-    <p/>`;
-</script>
+        <div class="foot_left" style="float: right;">
+            <div class="foot_bt">
+                官方合作伙伴
+            </div>
+            <div class="huoban_logo">
+                <ul>
+                    <li><a href="https://aws.amazon.com/cn/?nc2=h_lg" target="_blank"><img src="image/ymx_w.png"></a></li>
+                    <li><a href="https://www.payoneer.com/zh/irobotbox/" target="_blank"><img src="image/payoneer.png"></a></li>
+                    <li><a href="http://www.haixianhui.cc/" target="_blank"><img src="image/hxhlogo.png"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+<div style="text-align: center;padding:16px ;">东莞卖疯乐科技网站备案号：粤ICP备14046412号-1</div>
 </body>
 </html>
