--- a/erp/index.html
+++ b/erp/index.html
@@ -27,28 +27,34 @@
 <!--banner-->
 <div class="flexslider">
     <div class="center">
-        <div class="h2-title">
-            <p class="clear30"></p>
-            EFFICIENCY CAN BE YOURS
-            <p class="clea10"></p>
-        </div>
-        <div class="h3-title">
-            WE'LL LEAD THE WAY
-        </div>
-        <a href="schedule-a-demo.html" class="flex-try h4-title">TRY IT NOW +</a>
-        <div class="flex-box h3-title">
-            Looking for something specific
-            <p class="clear10"></p>or <p class="clear10"></p>
-            need a complete software solution?
-        </div>
+            <div class="clear30"></div>
+            <div class="h2-title">
+                <p class="clear30"></p><p class="clear30"></p>
+                追求高效简易的电商ERP系统
+                <p class="clea10"></p><p class="clear30"></p>
+            </div>
+            <div class="h3-title">
+                我们专注电商行业  拒绝繁琐
+            </div>
+            <div class="flex-try h4-title">
+                是否还在寻找简单合适的ERP <br/>
+                还是 <br/>
+                在寻找提高工作效率的系统</div>
+            <!--<div class="flex-box h3-title">
+                是否还在寻找简单合适的ERP
+                 还是
+                在寻找提高工作效率的系统
+            </div>-->
+        
+
     </div>
 </div>
 
 <div>
     <div class="box">
-        <div class="h3-title">We've got your needs covered.</div>
+        <div class="h3-title" >我觉得你应该体验我们的系统</div>
         <div class="clear30"></div>
-        <div class="h4-title">More information about erp.</div>
+        <div class="h4-title "><a href="schedule-a-demo.html" class="box-href">即将体验 +</a></div>
     </div>
     <!-- -->
     <div class="main-bc">
@@ -135,6 +141,7 @@
                 联系我们
             </div>
             <div class="dizhi">
+
                 <p>
                     联系人： simon<br>
                     联系电话：13169605747	0769-89938988-8034<br>
@@ -142,9 +149,10 @@
                     投诉电话：13169605747 投诉邮箱：service@wizerspark.com<br>
                     地址：广东省东莞市虎门镇南栅五区海杰路二路虎门跨境电商园
                 </p>
+
             </div>
         </div>
-        <div class="foot_left" style="float: right;">
+        <!--<div class="foot_left" style="float: right;">
             <div class="foot_bt">
                 官方合作伙伴
             </div>
@@ -155,18 +163,14 @@
                     <li><a href="http://www.haixianhui.cc/" target="_blank"><img src="image/hxhlogo.png"></a></li>
                 </ul>
             </div>
-        </div>
+        </div>-->
     </div>
 </footer>
 <div style="text-align: center;padding:16px ;">东莞卖疯乐科技网站备案号：粤ICP备14046412号-1</div>
-<nav>
-    <img src="image/consult_icon.gif"  border="0"  alt="" usemap="#planetmap" />
-    <map name="planetmap" id="planetmap">
-        <area onfocus="blur(this);"  shape="rect" coords="0,0,82,76" href ="http://wpa.qq.com/msgrd?v=3&uin=3004861728&site=qq&menu=yes" alt="Venus" />
-        <area onfocus="blur(this);" shape="rect" coords="0,76,82,152" href ="" alt="Mercury" />
-        <area onfocus="blur(this);" shape="rect" coords="0,152,82,230" href ="" alt="Sun" />
-    </map>
-    <a href="javascript:void(0)" class="btn_top" style="display: block;"></a>
-</nav>
+<script src="js/jquery-1.11.3.js"></script>
+<script>
+
+</script>
 </body>
+
 </html>
