--- a/erp/schedule-a-demo.html
+++ b/erp/schedule-a-demo.html
@@ -95,7 +95,7 @@
 
             </div>
         </div>
-        <div class="foot_left" style="float: right;">
+        <!--<div class="foot_left" style="float: right;">
             <div class="foot_bt">
                 官方合作伙伴
             </div>
@@ -106,7 +106,7 @@
                     <li><a href="http://www.haixianhui.cc/" target="_blank"><img src="image/hxhlogo.png"></a></li>
                 </ul>
             </div>
-        </div>
+        </div>-->
     </div>
 </footer>
 <div style="text-align: center;padding:16px ;">东莞卖疯乐科技网站备案号：粤ICP备14046412号-1</div>
