--- a/erp/text.html
+++ b/erp/text.html
@@ -76,7 +76,7 @@
 
         </div>
     </div>
-    <div class="foot_left" style="float: right;">
+    <!--<div class="foot_left" style="float: right;">
         <div class="foot_bt">
             官方合作伙伴
         </div>
@@ -87,11 +87,12 @@
                 <li><a href="http://www.haixianhui.cc/" target="_blank"><img src="image/hxhlogo.png"></a></li>
             </ul>
         </div>
-    </div>
+    </div>-->
 </div>
 </footer>
 <div style="text-align: center;padding:16px ;">东莞卖疯乐科技网站备案号：粤ICP备14046412号-1</div>
-<nav>
+
+<!--<nav>
     <img src="image/consult_icon.gif"  border="0"  alt="" usemap="#planetmap" />
     <map name="planetmap" id="planetmap">
         <area onfocus="blur(this);"  shape="rect" coords="0,0,82,76" href ="http://wpa.qq.com/msgrd?v=3&uin=3004861728&site=qq&menu=yes" alt="Venus" />
@@ -99,6 +100,7 @@
         <area onfocus="blur(this);" shape="rect" coords="0,152,82,230" href ="" alt="Sun" />
     </map>
     <a href="javascript:void(0)" class="btn_top" style="display: block;"></a>
-</nav>
+</nav>-->
+
 </body>
 </html>
